<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_mkdir">New Folder</string>
    <string name="action_mkfile">New File</string>
    <string name="action_delete">Delete</string>
    <string name="action_erase">Erase</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>
</resources>
