<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mkdir"
        android:orderInCategory="100"
        android:title="@string/action_mkdir"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mkfile"
        android:orderInCategory="100"
        android:title="@string/action_mkfile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_erase"
        android:orderInCategory="100"
        android:title="@string/action_erase"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cut"
        android:orderInCategory="100"
        android:title="@string/action_cut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste"
        android:orderInCategory="100"
        android:title="@string/action_paste"
        app:showAsAction="never" />
</menu>
